deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-dashboard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-dashboard
  template:
    metadata:
      labels:
        app: flask-dashboard
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: flask-dashboard
        image: ghcr.io/piotronwork/flask-img-dashboard:1-0-1
        ports:
        - containerPort: 5000

        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
