deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-dashboard
spec:
  selector:
    app: flask-dashboard
  ports:
  - port: 8080
    targetPort: 5000
  type: ClusterIP
